# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cc-reporter.yml
brain_games/: cli.py  shell.py
brain_games/games/: __init__.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_even.py.save  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
tests/: test_1.py  test_brain_calc.py  test_brain_even.py  test_brain_gcd.py  test_brain_prime.py  test_brain_progression.py  test_shell.py
tests/fixtures/: fake_cli.py  fake_game.py
