[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ai_gelios <ai_gelios@mail.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_games:play_even"
brain-calc = "brain_games.scripts.brain_games:play_calc"
brain-gcd = "brain_games.scripts.brain_games:play_gcd"
brain-progression = "brain_games.scripts.brain_games:play_progression"
brain-prime = "brain_games.scripts.brain_games:play_prime"
